--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ nav a:hover {
         <label for="email"></label>
         <input type="email" id="email" name="email" required placeholder="Seu e-mail">
         <label for="email"></label>
-        <input type="email" id="email" name="numero" required placeholder="Seu numero">
+        <input type="email" id="email" name="numero" required placeholder="Seu numero..">
         <label for="mensagem"></label>
         <textarea placeholder="Sua mensagem" id="mensagem" name="mensagem" required></textarea>
         <input type="submit" value="Enviar">
