--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ nav a:hover {
   </header>
   
   <div class="container" id="inicio">
-    <h2>Descubra o Prouduto que vai Transformar seu Dia.</h2>
+    <h2>Descubra o Produto que vai Transformar seu Dia.</h2>
   <div class="paragrafo-container">
     <p>Simples, poderoso, eficiente. Descubra como nosso produto pode <br>facilitar sua vida de forma incrível.</br></p>
     </div>
@@ -179,7 +179,7 @@ nav a:hover {
     <div class="cards" id="info">
       <div class="card">
         <h3>🚀Rápido</h3>
-        <p>Velocidade é essencial. Nossa solução é otimizada para entregar resultados em tempo recorde</p>
+        <p>Velocidade é essencial. Nossa solução é otimizada para entregar resultados em tempo recorde.</p>
       </div>
       <div class="card">
         <h3>🔒Seguro</h3>
@@ -200,7 +200,7 @@ nav a:hover {
         <label for="email"></label>
         <input type="email" id="email" name="email" required placeholder="Seu e-mail">
         <label for="email"></label>
-        <input type="email" id="email" name="numero" required placeholder="Seu numero">
+        <input type="email" id="email" name="numero" required placeholder="Seu número">
         <label for="mensagem"></label>
         <textarea placeholder="Sua mensagem" id="mensagem" name="mensagem" required></textarea>
         <input type="submit" value="Enviar">
